Contact spacing fix

--- a/static/sass/page__index.scss
+++ b/static/sass/page__index.scss
@@ -495,7 +495,7 @@ CONTACT
 
     h3 {
         color: $basic;
-        padding-top: 165px;
+        padding-top: 210px;
     }
 
     .button--send {
